--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"
     ></script>
     <!-- splide -->
-	  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <!-- axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- datatables -->
@@ -75,8 +75,10 @@
     <!-- js chart -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
     <!-- isotope -->
-	  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-   
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <!-- filter -->
+    <script src="https://cdn.jsdelivr.net/gh/silvia-odwyer/pixels.js@0.8.1/dist/Pixels.js"></script>
+
     <!-- main -->
     <script type="module" src="/src/main.jsx"></script>
 
